@@ -9,6 +9,7 @@
 </head>
 <body>
 <div><button id="execute">Execute</button></div>
+<div id="help-body"><input type="checkbox" id="help-switch"><label for="help-switch">Help</label></div>
 <div>
   <h1>Main</h1>
   <div id="main-body">
@@ -33,13 +34,13 @@
       <dt><label for="main-expression">Expression</label></dt>
       <dd><textarea id="main-expression"></textarea></dd>
     </dl>
-    <div>If you want to enter a new line, please enter the Shift-Enter.</div>
+    <div class="help">If you want to enter a new line, please enter the Shift-Enter.</div>
   </div>
 </div>
 <div>
   <h1 id="context-header"><input type="checkbox" id="context-switch"><label for="context-switch">Context</label></h1>
   <div id="context-body">
-    <div>You can specify a context. The first node of the results is used as the CONTEXT. (document.evaluate(expr, CONTEXT, ...), CONTEXT.querySelector(...), CONTEXT.querySelectorAll(...))</div>
+    <div class="help">You can specify a context. The first node of the results is used as the CONTEXT. (document.evaluate(expr, CONTEXT, ...), CONTEXT.querySelector(...), CONTEXT.querySelectorAll(...))</div>
     <dl>
       <dt><label for="context-way">Way</label></dt>
       <dd>
@@ -63,7 +64,7 @@
 <div>
   <h1 id="resolver-header"><input type="checkbox" id="resolver-switch"><label for="resolver-switch">namespaceResolver</label></h1>
   <div id="resolver-body">
-    <div>You can specify the behavior of the namespaceResolver function. If you want to get the P elements which are in the "http://www.w3.org/1999/xhtml" namespace, please do as follows.
+    <div class="help">You can specify the behavior of the namespaceResolver function. If you want to get the P elements which are in the "http://www.w3.org/1999/xhtml" namespace, please do as follows.
       <ol>
         <li>Enter {"x":"http://www.w3.org/1999/xhtml"} in the resolver input field.</li>
         <li>Enter //x:p in the expression input field.</li>
@@ -79,13 +80,14 @@
 <div>
   <h1 id="frame-header"><input type="checkbox" id="frame-switch"><label for="frame-switch">Frame</label></h1>
   <div id="frame-body">
-    <div>You can specify the frame where the expression is executed. If you want to specify a frame, please do as follows.
+    <div class="help">You can specify the frame where the expression is executed. If you want to specify a frame, please do as follows.
       <ol>
         <li>Click the Get-all-frameId button.</li>
         <li>Select a frameId.</li>
         <li>Click the Focus-frame button.</li>
         <li>Execute a expression.</li>
       </ol>
+    </div>
     <div>
       <button id="get-all-frame-id">Get all frameId</button><select id="frame-id-list"><option data-frame-id="manual">Manual</option></select>
     </div>
