@@ -1,7 +1,13 @@
 2017-11-07  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/popup/popup.js:
+	Define helpCheckbox variable.
+	Define changeHelpVisible function.
+	Define helpBody variable.
+
 	* tryXpath/popup/popup.html (Main):
 	Modify texts.
+	Add the help-switch element.
 
 	* tryXpath/popup/popup.js:
 	Change time to send requestRestorePopupState message.
